--- a/LIMA/Aula7/assets/CSS/style.css
+++ b/LIMA/Aula7/assets/CSS/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,300;0,500;0,600;1,700&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -8,6 +10,8 @@ body{
     width: 100vw;
     height: 100vh;
     background-color: lightgray;
+    overflow-x: hidden;
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 a{
@@ -25,13 +29,10 @@ header{
     background-color: #A9A9A9;
 }
 
-.logo{
-    background-color: lightslategrey;
-    width: 70px;
-    height: 70px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.logo img{
+    width: 90px;
+    height: 90px;
+    mix-blend-mode: multiply;
 }
 .buscar{
     padding: 10px;
@@ -86,7 +87,7 @@ header{
 
 main{
     width: 85%;
-    height: 70%;
+    height: 80%;
     display: grid;
     grid-template-columns: 200px 200px 200px;
     justify-content: center;
@@ -94,8 +95,48 @@ main{
     column-gap: 3%;
 }
 
+.item-1 img{
+    width: 200px;
+    mix-blend-mode: multiply;
+}
+.item-2 img{
+    width: 200px;
+    mix-blend-mode: multiply;
+}
+.item-3 img{
+    width: 200px;
+    mix-blend-mode: multiply;
+}
+
+.item-1 p{
+    text-align: center;
+    padding-top: 10px;
+    color: black;
+}
+.item-2 p{
+    text-align: center;
+    padding-top: 10px;
+    color: black;
+}
+.item-3 p{
+    text-align: center;
+    padding-top: 10px;
+    color: black;
+}
+
 footer{
     width: 100vw;
     height: 15vh;
     background-color: #808080;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    column-gap: 10vw;
+    align-items: center;
+}
+
+footer p{
+    color: black;
+    font-size: 18px;
+    font-weight: bold;
 }
