--- a/LIMA/Aula10/ListaExercícios/style.css
+++ b/LIMA/Aula10/ListaExercícios/style.css
@@ -17,11 +17,16 @@ body {
   flex-direction: column;
   align-items: center;
 }
-
 h1 {
   margin-top: 50px;
 }
+button {
+  margin-top: 20px;
+  padding: 5px;
+  width: 192px;
+}
 
+/*Exercício 1*/
 .ex1 {
   display: flex;
   flex-direction: column;
@@ -49,17 +54,13 @@ h1 {
   margin-top: 5px;
   overflow: hidden;
 }
-.button {
-  margin-top: 10px;
-  padding: 5px;
-  width: 192px;
-}
 .ex1 h3 {
   width: 192px;
   margin-top: 5px;
   text-align: center;
 }
 
+/* Exercício 2 */
 .ex2 {
   display: flex;
   flex-direction: column;
@@ -86,11 +87,6 @@ h1 {
   padding: 5px;
   margin-top: 5px;
   overflow: hidden;
-}
-.button {
-  margin-top: 10px;
-  padding: 5px;
-  width: 192px;
 }
 .ex2 h3 {
   width: 192px;
