--- a/LIMA/Aula10/ListaExercícios/style.css
+++ b/LIMA/Aula10/ListaExercícios/style.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400&display=swap');
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Josefin Sans', sans-serif;
 }
 
 input::-webkit-outer-spin-button,
@@ -11,27 +13,30 @@ input::-webkit-inner-spin-button {
 
 body {
   width: 100vw;
-  height: 100vh;
+  height: 1000vh;
   background-color: whitesmoke;
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow-x: hidden;
 }
 h1 {
   margin-top: 50px;
 }
 button {
   margin-top: 20px;
+  margin-bottom: 20px;
   padding: 5px;
   width: 192px;
 }
 
-/*Exercício 1*/
+/* Exercício 1 */
 .ex1 {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 100vw;
 }
 .ex1 h2 {
   text-decoration: underline;
@@ -54,11 +59,6 @@ button {
   margin-top: 5px;
   overflow: hidden;
 }
-.ex1 h3 {
-  width: 192px;
-  margin-top: 5px;
-  text-align: center;
-}
 
 /* Exercício 2 */
 .ex2 {
@@ -66,6 +66,8 @@ button {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-top: 30px;
+  width: 100vw;
 }
 .ex2 h2 {
   text-decoration: underline;
@@ -89,7 +91,243 @@ button {
   overflow: hidden;
 }
 .ex2 h3 {
-  width: 192px;
   margin-top: 5px;
-  text-align: center;
+}
+
+/* Exercício 3 */
+.ex3 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+  width: 100vw;
+}
+.ex3 h2 {
+  text-decoration: underline;
+  margin-top: 20px;
+}
+.ex3 p {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: 20px;
+  width: 40vw;
+  text-align: justify;
+}
+.ex3 label {
+  margin-top: 15px;
+  font-weight: bold;
+}
+.ex3 input {
+  width: 192px;
+  padding: 5px;
+  margin-top: 5px;
+  overflow: hidden;
+}
+.ex3 h3 {
+  margin-top: 5px;
+}
+
+/* Exercício 4 */
+.ex4 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+  width: 100vw;
+}
+.ex4 h2 {
+  text-decoration: underline;
+  margin-top: 20px;
+}
+.ex4 p {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: 20px;
+  width: 40vw;
+  text-align: justify;
+}
+.ex4 label {
+  margin-top: 15px;
+  font-weight: bold;
+}
+.ex4 input {
+  width: 192px;
+  padding: 5px;
+  margin-top: 5px;
+  overflow: hidden;
+}
+.ex4 h3 {
+  margin-top: 5px;
+}
+
+/* Exercício 5 */
+.ex5 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+  width: 100vw;
+}
+.ex5 h2 {
+  text-decoration: underline;
+  margin-top: 20px;
+}
+.ex5 p {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: 20px;
+  width: 40vw;
+  text-align: justify;
+}
+.ex5 label {
+  margin-top: 15px;
+  font-weight: bold;
+}
+.ex5 input {
+  width: 192px;
+  padding: 5px;
+  margin-top: 5px;
+  overflow: hidden;
+}
+.ex5 h3 {
+  margin-top: 5px;
+}
+
+/* Exercício 6 */
+.ex6 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+  width: 100vw;
+}
+.ex6 h2 {
+  text-decoration: underline;
+  margin-top: 20px;
+}
+.ex6 p {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: 20px;
+  width: 40vw;
+  text-align: justify;
+}
+.ex6 label {
+  margin-top: 15px;
+  font-weight: bold;
+}
+.ex6 input {
+  width: 192px;
+  padding: 5px;
+  margin-top: 5px;
+  overflow: hidden;
+}
+.ex6 h3 {
+  margin-top: 5px;
+}
+
+/* Exercício 7 */
+.ex7 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+  width: 100vw;
+}
+.ex7 h2 {
+  text-decoration: underline;
+  margin-top: 20px;
+}
+.ex7 p {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: 20px;
+  width: 40vw;
+  text-align: justify;
+}
+.ex7 label {
+  margin-top: 15px;
+  font-weight: bold;
+}
+.ex7 input {
+  width: 192px;
+  padding: 5px;
+  margin-top: 5px;
+  overflow: hidden;
+}
+.ex7 h3 {
+  margin-top: 5px;
+}
+
+/* Exercício 8 */
+.ex8 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+  width: 100vw;
+}
+.ex8 h2 {
+  text-decoration: underline;
+  margin-top: 20px;
+}
+.ex8 p {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: 20px;
+  width: 40vw;
+  text-align: justify;
+}
+.ex8 label {
+  margin-top: 15px;
+  font-weight: bold;
+}
+.ex8 input {
+  width: 192px;
+  padding: 5px;
+  margin-top: 5px;
+  overflow: hidden;
+}
+.ex8 h3 {
+  margin-top: 5px;
+}
+
+/* Exercício 9 */
+.ex9 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+  width: 100vw;
+}
+.ex9 h2 {
+  text-decoration: underline;
+  margin-top: 20px;
+}
+.ex9 p {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: 20px;
+  width: 40vw;
+  text-align: justify;
+}
+.ex9 label {
+  margin-top: 15px;
+  font-weight: bold;
+}
+.ex9 input {
+  width: 192px;
+  padding: 5px;
+  margin-top: 5px;
+  overflow: hidden;
+}
+.ex9 h3 {
+  margin-top: 5px;
 }
