--- a/FPOO/Aula 16 - 05.10.2023/Atividades - 06.10.2023/Ex2/style.css
+++ b/FPOO/Aula 16 - 05.10.2023/Atividades - 06.10.2023/Ex2/style.css
@@ -5,6 +5,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Josefin Sans', sans-serif;
+  color: #FFDEAD
 }
 
 body{
@@ -14,6 +15,7 @@ body{
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  background-color: #3e2417;
 }
 
 header{
@@ -38,5 +40,21 @@ main div{
   height: 60%;
   display: flex;
   flex-direction: column;
-  box-shadow: 10px 10px 5px rgba(0, 0, 0, .3);
+  justify-content: space-evenly;
+  align-items: center;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, .4);
+  background-color: #3e2117;
+}
+
+.nome{
+  font-weight: bold;
+}
+
+.peso span, .altura span, .imc span{
+  margin-left: 60px;
+}
+
+hr{
+  width: 90%;
+  border-color: #FFDEAD;
 }
