--- a/LIMA/Aula10/ListaExercícios/style.css
+++ b/LIMA/Aula10/ListaExercícios/style.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: "Josefin Sans", sans-serif;
 }
 
 input::-webkit-outer-spin-button,
@@ -13,7 +13,7 @@ input::-webkit-inner-spin-button {
 
 body {
   width: 100vw;
-  height: 370vh;
+  height: 400vh;
   background-color: whitesmoke;
   display: flex;
   flex-direction: column;
@@ -36,8 +36,16 @@ p {
   width: 40vw;
   text-align: justify;
 }
-.ex1, .ex2, .ex3, .ex4, .ex5,
-.ex6, .ex7, .ex8, .ex9, .ex10 {
+.ex1,
+.ex2,
+.ex3,
+.ex4,
+.ex5,
+.ex6,
+.ex7,
+.ex8,
+.ex9,
+.ex10 {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -45,7 +53,7 @@ p {
   margin-top: 30px;
   width: 100vw;
 }
-h2{
+h2 {
   text-decoration: underline;
   margin-top: 20px;
 }
