--- a/FPOO/Aula 18 - 17.10.2023/style.css
+++ b/FPOO/Aula 18 - 17.10.2023/style.css
@@ -1,7 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Barlow&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Barlow", sans-serif;
 }
 
 input::-webkit-outer-spin-button,
@@ -9,9 +12,22 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
 }
 
+:root {
+  --color1: #d5ddd8;
+  --color2: #a7b0a7;
+  --color3: #707375;
+  --color4: #3c4342;
+  --color5: #190f25;
+}
+
 body {
   width: 100vw;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: var(--color1);
+  overflow-x: hidden;
 }
 
 header {
@@ -19,7 +35,80 @@ header {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  row-gap: 2vh;
+  row-gap: 25px;
   width: 100vw;
-  height: 10vh;
+  height: 20vh;
+}
+header h2 {
+  font-size: 40px;
+  color: var(--color4);
+}
+input {
+  width: 15vw;
+  padding: 15px;
+  margin-right: 15px;
+  border: 1px;
+  border-radius: 5px;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.4);
+  background-color: whitesmoke;
+}
+input::placeholder {
+  color: black;
+  font-size: 16px;
+}
+button {
+  width: 5vw;
+  padding: 15px;
+  border: 0px;
+  border-radius: 5px;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.4);
+  font-size: 16px;
+  background-color: whitesmoke;
+  color: black;
+}
+
+main {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 70vw;
+  height: 80vh;
+  column-gap: 50px;
+  margin-top: 30px;
+}
+
+hr {
+  margin-left: 10px;
+  margin-right: 10px;
+  border-color: var(--color4);
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  row-gap: 2vh;
+  width: 15vw;
+  height: 35vh;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.4);
+  border-radius: 10px;
+  background-color: var(--color2);
+}
+
+.nomeCard {
+  text-align: center;
+  font-size: 22px;
+  color: var(--color4);
+}
+
+.flexDiv {
+  display: flex;
+  justify-content: space-between;
+  margin-right: 10px;
+  margin-left: 10px;
+}
+.flexDiv p {
+  color: var(--color5);
+  font-size: 17px;
+  font-weight: 600;
 }
