--- a/FPOO/Aula 18 - 17.10.2023/correcao/style2.css
+++ b/FPOO/Aula 18 - 17.10.2023/correcao/style2.css
@@ -1,20 +1,106 @@
-body{
+@import url("https://fonts.googleapis.com/css2?family=Tilt+Neon&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Tilt Neon", sans-serif;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
+body {
   background: #eee;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.card{
-  width: 250px;
+form {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  column-gap: 20px;
+  margin-top: 30px;
+  margin-bottom: 50px;
+}
+
+.inputI {
+  width: 15vw;
+  padding: 10px;
+  border: none;
+  border-radius: 10px;
+  box-shadow: -1px -1px 2px rgba(0, 0, 0, 0.5);
+}
+.inputI::placeholder {
+  font-size: 17px;
+  font-weight: 600;
+}
+.enviar {
+  font-size: 16px;
+  font-weight: 600;
+  color: rgba(0, 0, 0, 0.6);
+  width: 10vw;
+  padding: 10px;
+  border: none;
+  border-radius: 10px;
+  box-shadow: -1px -1px 2px rgba(0, 0, 0, 0.5);
+}
+
+.cards {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  column-gap: 30px;
+  row-gap: 20px;
+  flex-wrap: wrap;
+  width: 70vw;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 300px;
+  height: 350px;
   border-radius: 15px;
-  padding: 20px;
-  border: 1px solid black;
+  padding: 10px;
+  border: none;
   background: #fff;
-  box-shadow: 5px 5px 15px rgba(0,0,0, .5);
+  box-shadow: -2px -2px 10px rgba(0, 0, 0, 0.5);
 }
 
-.card h1{
+.card div {
+  display: flex;
+  flex-direction: row;
+  column-gap: 10px;
+}
+
+.remove {
+  border: none;
+  border-radius: 10px;
+  background: rgb(235, 140, 140);
+  padding: 10px;
+}
+.edit {
+  border: none;
+  border-radius: 10px;
+  background: rgb(125, 160, 240);
+  padding: 10px;
+}
+
+.card h1 {
   text-align: center;
 }
 
-.model{
+hr {
+  width: 95%;
+}
+
+.model {
   display: none;
 }
