--- a/FPOO/Aula 18 - 17.10.2023/atividadeAula - 17.10.2023/style.css
+++ b/FPOO/Aula 18 - 17.10.2023/atividadeAula - 17.10.2023/style.css
@@ -22,7 +22,6 @@ input::-webkit-inner-spin-button {
 
 body {
   width: 100vw;
-  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -59,7 +58,7 @@ input::placeholder {
 button {
   width: 5vw;
   padding: 15px;
-  border: 0px;
+  border: none;
   border-radius: 5px;
   box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.4);
   font-size: 16px;
@@ -72,7 +71,7 @@ main {
   flex-wrap: wrap;
   justify-content: center;
   width: 70vw;
-  height: 80vh;
+  height: 120vh;
   column-gap: 50px;
   margin-top: 30px;
 }
