--- a/PORTFOLIO/assets/CSS/style.css
+++ b/PORTFOLIO/assets/CSS/style.css
@@ -68,14 +68,14 @@ header {
   font-size: 1.2rem;
   color: white;
   padding: 5px;
-  border-radius: 10px;
 }
 
 .menus p:hover {
   color: rgb(255, 250, 0);
   transform: scale(1.08);
   transition: 0.5s;
-  border: #2bc1c8 solid 1px;
+  border-top: #2bc1c8 solid 1px;
+  border-bottom: #2bc1c8 solid 1px;
 }
 
 .home {
@@ -105,6 +105,7 @@ header {
 .text1 {
   color: white;
   font-size: 3.5rem;
+  width: 80%;
 }
 .text1 span {
   color: #2bc1c8;
@@ -154,6 +155,7 @@ header {
 .redes a:hover {
   transform: scale(1.08);
   transition: 0.5s;
+  border-bottom: rgb(255, 250, 0) solid 1px;
 }
 
 .about, .skills, .projects{
