--- a/PORTFOLIO/assets/CSS/style.css
+++ b/PORTFOLIO/assets/CSS/style.css
@@ -1,12 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Caveat&family=Dancing+Script&family=Share+Tech+Mono&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Caveat&family=Dancing+Script&family=Share+Tech+Mono&display=swap");
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Share Tech Mono', monospace;
+  font-family: "Share Tech Mono", monospace;
 }
-html{
+html {
   scroll-behavior: smooth;
   scroll-padding-top: 20vh;
 }
@@ -41,7 +41,8 @@ body {
 }
 
 header {
-  width: 70%;
+  background-image: linear-gradient(to right, #5d1776, #0a5c6f);
+  width: 100%;
   height: 10vh;
   display: flex;
   flex-direction: row;
@@ -49,10 +50,14 @@ header {
   justify-content: flex-start;
   column-gap: 5%;
   position: fixed;
+  z-index: 99;
+}
+.logotipo {
+  margin-left: 15%;
 }
 
 .logotipo img {
-  width: 80px;
+  width: 65px;
 }
 
 .menus {
@@ -60,7 +65,7 @@ header {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  width: 35%;
+  width: 25%;
   height: 50%;
   column-gap: 5%;
 }
@@ -118,7 +123,7 @@ header {
   width: 27ch;
   white-space: nowrap;
   overflow: hidden;
-  animation: typing 2S steps(27), blinking 0.5s ease-in-out infinite;
+  animation: typing 2s steps(27), blinking 0.5s ease-in-out infinite;
 }
 .text2 span {
   color: rgb(255, 250, 0);
@@ -137,7 +142,7 @@ header {
 .foto {
   background-color: black;
   border-radius: 10px;
-  box-shadow: 1px 1px 5px rgb(250, 0, 255); 
+  box-shadow: 1px 1px 5px rgb(250, 0, 255);
   width: 300px;
   height: 300px;
 }
@@ -147,6 +152,7 @@ header {
   align-items: center;
   justify-content: center;
   width: 200px;
+  height: 50px;
   column-gap: 5%;
 }
 .redes a img {
@@ -158,14 +164,16 @@ header {
   border-bottom: rgb(255, 250, 0) solid 1px;
 }
 
-.about, .skills, .projects{
+.about,
+.skills,
+.projects {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
   width: 70%;
 }
-.about{
+.about {
   height: 50vh;
   row-gap: 50px;
 }
@@ -183,7 +191,7 @@ header {
 .sectionProjects span {
   color: #2bc1c8;
 }
-.aboutMe{
+.aboutMe {
   text-align: justify;
   width: 100%;
   height: 20%;
@@ -192,11 +200,11 @@ header {
   line-height: 35px;
 }
 
-.skills{
+.skills {
   height: 100vh;
 }
 
-.projects{
+.projects {
   height: 100vh;
 }
 
@@ -218,8 +226,8 @@ header {
   }
 }
 
-@keyframes blinking{
-  0%{
+@keyframes blinking {
+  0% {
     border-color: transparent;
   }
 }
