--- a/PORTFOLIO/assets/CSS/style.css
+++ b/PORTFOLIO/assets/CSS/style.css
@@ -77,7 +77,7 @@ header {
 
 .menus p:hover {
   color: rgb(255, 250, 0);
-  transform: scale(1.08);
+  transform: scale(1.1);
   transition: 0.5s;
   border-top: #2bc1c8 solid 1px;
   border-bottom: #2bc1c8 solid 1px;
@@ -161,7 +161,7 @@ header {
 .redes a:hover {
   transform: scale(1.08);
   transition: 0.5s;
-  border-bottom: rgb(255, 250, 0) solid 1px;
+  border-bottom: 1px solid rgb(255, 250, 0);
 }
 
 .about,
