--- a/PORTFOLIO/assets/CSS/style.css
+++ b/PORTFOLIO/assets/CSS/style.css
@@ -75,7 +75,7 @@ header {
   padding: 5px;
 }
 
-.item-menu:hover {
+.active, .item-menu:hover {
   color: rgb(255, 250, 0);
   transform: scale(1.1);
   transition: 0.5s;
