--- a/PORTFOLIO/assets/css/style.css
+++ b/PORTFOLIO/assets/css/style.css
@@ -77,14 +77,12 @@ header {
 
 .item-menu:hover {
   color: rgb(255, 250, 0);
-  transform: scale(1.1);
+  transform: scale(1.15);
   transition: 0.5s;
-  border-top: #2bc1c8 solid 1px;
-  border-bottom: #2bc1c8 solid 1px;
 }
 .active {
   color: rgb(255, 250, 0);
-  transform: scale(1.1);
+  transform: scale(1.15);
 }
 
 .home {
@@ -126,8 +124,8 @@ header {
   font-size: 2.3rem;
   width: 27ch;
   white-space: nowrap;
+  animation: typing 10s steps(27), blinking 0.5s ease-in-out infinite;
   overflow: hidden;
-  animation: typing 2s steps(27), blinking 0.5s ease-in-out infinite;
 }
 .text2 span {
   color: rgb(255, 250, 0);
@@ -165,7 +163,6 @@ header {
 .redes a:hover {
   transform: scale(1.08);
   transition: 0.5s;
-  border-bottom: 1px solid rgb(255, 250, 0);
 }
 
 .about,
@@ -178,7 +175,7 @@ header {
   width: 70%;
 }
 .about {
-  height: 50vh;
+  height: 100vh;
   row-gap: 50px;
 }
 .sectionAbout,
@@ -197,8 +194,8 @@ header {
 }
 .aboutMe {
   text-align: justify;
-  width: 100%;
-  height: 20%;
+  width: 50%;
+  height: 50%;
   font-size: 1.5rem;
   color: white;
   line-height: 35px;
@@ -209,7 +206,23 @@ header {
 } */
 
 .projects {
-  height: 100vh;
+  height: 120vh;
+  row-gap: 50px;
+}
+
+.myProjects {
+  display: flex;
+  flex-direction: column;
+  row-gap: 30px;
+  width: 100%;
+  height: 100%;
+}
+
+.myProjects div {
+  width: 500px;
+  height: 300px;
+  border: 1px solid rgb(250, 0, 255);
+  background-color: transparent;
 }
 
 @keyframes float {
