--- a/LIMA/Aula14/assets/css/styleEx.css
+++ b/LIMA/Aula14/assets/css/styleEx.css
@@ -147,7 +147,7 @@ input {
   color: var(--color5);
 }
 
-.btnIn25 {
+.btn {
   width: 110px;
   height: 40px;
   border-radius: 5px;
@@ -158,12 +158,12 @@ input {
   cursor: pointer;
 }
 
-.btnIn25:hover {
+.btn:hover {
   transform: scale(1.1);
   background: var(--color8);
 }
 
-.btnIn25:active {
+.btn:active {
   transform: scale(0.95);
 }
 
