--- a/LIMA/Aula14/assets/css/styleEx.css
+++ b/LIMA/Aula14/assets/css/styleEx.css
@@ -32,6 +32,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  overflow-x: hidden;
 }
 
 header {
@@ -69,9 +70,11 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-between;
   margin-top: 50px;
   row-gap: 100px;
+  margin-bottom: 50px;
+
 }
 main > h1 {
   color: var(--color5);
@@ -115,10 +118,12 @@ main > h1 {
 #result {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   row-gap: 30px;
   color: var(--color3);
+  width: 100%;
+  height: 40vh;
 }
 
 #result > h2 {
@@ -128,11 +133,23 @@ main > h1 {
 
 .resultEx {
   display: flex;
-  gap: 5px;
+  flex-direction: column;
+  width: 100%;
+  height: auto;
+  align-items: center;
+  justify-content: center;
+  row-gap: 10px;
+  text-align: justify;
+}
+
+.resultEx p {
+  font-size: 1.5rem;
+  max-width: 100%;
+  word-wrap: break-word;
 }
 
 .resultEx span {
-  font-size: 1.5rem;
+  margin-right: 7px;
 }
 
 input {
@@ -147,7 +164,7 @@ input {
   color: var(--color5);
 }
 
-.btn {
+#result > button {
   width: 110px;
   height: 40px;
   border-radius: 5px;
@@ -158,12 +175,12 @@ input {
   cursor: pointer;
 }
 
-.btn:hover {
+#result > button:hover {
   transform: scale(1.1);
   background: var(--color8);
 }
 
-.btn:active {
+#result > button:active {
   transform: scale(0.95);
 }
 
