--- a/LIMA/Aula14/assets/css/styleEx.css
+++ b/LIMA/Aula14/assets/css/styleEx.css
@@ -27,7 +27,7 @@ a {
 body {
   background: var(--color1);
   width: 100vw;
-  height: 100vh;
+  height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -66,7 +66,7 @@ header div a:hover {
 
 main {
   width: 70%;
-  height: 90vh;
+  height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -123,7 +123,7 @@ main > h1 {
   row-gap: 30px;
   color: var(--color3);
   width: 100%;
-  height: 40vh;
+  height: auto;
 }
 
 #result > h2 {
@@ -182,6 +182,12 @@ input {
 
 #result > button:active {
   transform: scale(0.95);
+}
+
+.ex27 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 input::-webkit-outer-spin-button,
